extra space on mobile fix

--- a/src/css/seed.less
+++ b/src/css/seed.less
@@ -171,6 +171,8 @@ header.top {
 
 /*-- Filter Menu --*/
 
+
+
 .sticky{
   position: fixed;
   z-index: 1; //for ie11
@@ -183,6 +185,7 @@ header.top {
 .sticky + .filters {
   padding-top: 102px;
 }
+
 
 
 .filters {
@@ -1023,4 +1026,8 @@ background: linear-gradient(180deg, rgba(214,229,255,1) 0%, rgba(155,179,221,1) 
   padding: 0 10px;
   max-width: 960px;
   margin: auto;
+}
+
+html,body{
+    overflow-x: hidden;
 }
